feat: allow config outdated warning per page

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
     {{ .Content }}
   </article>
   {{ else }}
-  {{ if .Site.Params.outdated.enable }}
+  {{ if cond (ne .Params.outdated nil) .Params.outdated .Site.Params.outdated.enable }}
   {{ $days := div (sub now.Unix .Lastmod.Unix) 86400 }}
   {{ if gt $days .Site.Params.outdated.limit }}
   <div class="warning">{{ printf .Site.Params.outdated.warning $days | safeHTML }}</div>
