fix: pre background-color overriden

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -95,7 +95,7 @@
 }
 
 .content pre {
-    background-color: #F5F5F5;
+    background-color: #F5F5F5!important;
     border-radius: .2rem;
     font-family: 'Latin Modern Mono', Courier, monospace;
     margin-top: .5rem;
