--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,11 +9,9 @@
       <a class="link" href="{{ .URL | safeURL }}">{{ .Name }}</a>
     </span>
     {{ end }}
-    {{ if eq .Site.Params.mode "toggle" -}}
     <span class="nav-bar-item">
-      <a id="dark-mode-toggle" onclick="toggleTheme()" href=""></a>
+      <a class="link" id="dark-mode-toggle" onclick="toggleTheme()" href=""></a>
     </span>
-		<script src="{{ .Site.BaseURL }}static/js/themetoggle.js"></script>
-		{{ end }}
+		<script src="{{ .Site.BaseURL }}js/themetoggle.js"></script>
   </nav>
 </header>
