--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
 
 {{ define "main" }}
 <main id="main" class="post">
-  {{ if ne .Section "post"}}
+  {{ if eq .Type "page"}}
   <article class="content">
     {{ .Content }}
   </article>
@@ -16,14 +16,6 @@
   {{ end }}
   {{ end }}
   <h1>{{ .Title }}</h1>
-  {{ if ne .Params.tags nil }}
-  <div>
-    <b>Keywords: </b>
-    {{ range .Params.tags }}
-    <a class="link" href='{{ "tags" | absURL }}/{{ . | urlize }}'>#{{ . }}</a>
-    {{ end }}
-  </div>
-  {{ end }}
   {{ if cond (ne .Params.toc nil) .Params.toc .Site.Params.toc }}
   {{ if ne .TableOfContents "<nav id=\"TableOfContents\"></nav>" }}
   <details>
@@ -41,6 +33,15 @@
     {{ .Content }}
     {{ end }}
   </article>
+  {{ if ne .Params.tags nil }}
+  <hr style="margin-top: 1em;">
+  <div>
+    <b>Keywords: </b>
+    {{ range .Params.tags }}
+    <a class="link" href='{{ "tags" | absURL }}/{{ . | urlize }}'>#{{ . }}</a>
+    {{ end }}
+  </div>
+  {{ end }}
   <div class="paginator">
     {{ if .PrevInSection }}
     <a class="link" href="{{ .PrevInSection.Permalink }}">← prev</a>
@@ -53,6 +54,15 @@
     <a></a>
     {{ end }}
   </div>
+  <hr style="margin-top: 1em;">
+  <div class="author-info">
+    <img src="{{.Site.Author.picturepath}}" alt="{{ .Site.Author.name }}">
+    <div>
+      <h5>Author: {{ .Site.Author.name }}</h5>
+      <p>{{ .Site.Author.description }}</p>
+    </div>
+  </div>
+  <hr style="margin-bottom: 1em;">
   <div class="comment">
     <!-- disqus -->
     {{ template "_internal/disqus.html" . }}
