fix: deprecated `break-word` not working in Safari (#22)
see https://developer.mozilla.org/en-US/docs/Web/CSS/word-break

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -89,8 +89,8 @@ time {
     flex-direction: column;
     font-family: 'Latin Modern Roman', 'Times New Roman', serif;
     min-height: 100vh;
+    overflow-wrap: break-word;
     padding: 1rem;
-    word-break: break-word;
 }
 
 .link {
