add support for custom css for individual pages

--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -48,6 +48,7 @@
 <!-- style -->
 <link media="screen" rel="stylesheet" href='{{ "css/common.css" | absURL }}'>
 <link media="screen" rel="stylesheet" href='{{ "css/content.css" | absURL }}'>
+<link media="screen" rel="stylesheet" href='{{ "style.css" }}'>
 
 <!-- title -->
 {{ if .IsHome }}
