--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,7 +19,7 @@
     <h2>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h2>
     <ul>
       {{ range .Pages }}
-      <li>
+      <li title="{{ .Summary }}">
         <a class="link" href="{{ .RelPermalink }}">{{ .Title }}</a>
         <time>{{ .PublishDate.Format .Site.Params.dateFormat }}</time>
       </li>
